--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,3 +65,136 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
+nav {
+	padding: 5px;
+	width: 100%;
+	margin: 20px;
+}
+.navigation a {
+	border: 1px solid lightgray;	
+	border-radius: 10px;
+	padding: 10px;
+	margin: 60px;
+	margin-right: 30px;
+	vertical-align: bottom;
+	text-decoration: none;
+	color: gray;
+}
+
+.navigation a:hover {
+	background-color: blueviolet;
+	color: white;
+}
+
+.navigation {
+	display: inline-block;
+	height: 38px;
+	vertical-align: bottom;
+}
+
+.logo {
+	margin-left: 200px;
+	padding: 2px;
+}
+
+.wali {
+	text-align: center;
+	margin: 0 auto;
+}
+
+header .title {
+	display: inline-block;
+}
+
+.title h1 {
+	font-size: 90px;
+	margin-bottom: 50px;
+
+}
+
+.title button {
+	border-radius: 10px;
+	border: 1px solid lightgray;
+	padding: 10px;
+	margin: 20px;
+}
+
+header .img	{
+	display: inline-block;
+	margin: 70px;
+	
+}
+
+
+header {
+	border-bottom: 1px solid black;
+	margin: 2px;
+}
+
+.top-content {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+	margin-left: 450px;
+}
+
+.p1 {
+	display: inline-block;
+	width: 23%;
+	
+	
+}
+
+h2 {
+	vertical-align: bottom;
+	width: 15%;
+	/* margin-left: 10px; */
+	margin-bottom: 10px;
+	margin-top: 10px;
+	display: inline-block;
+}
+
+.p {
+	/* margin-left: 10px; */
+	
+	width: 100%;
+}
+
+.middle-img {
+	
+	margin-left: 450px;
+}
+
+.p2 {
+	
+	display: inline-block;
+	width: 15%;
+}
+
+.bottom-content {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+	margin-left: 450px;
+}
+
+.contact {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 100%;
+	margin-left: 450px;
+}
+
+.contact p {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+
+
+footer {
+	
+	margin: 50px;
+	width: 100%;
+	text-align: center;
+}
