--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -111,23 +111,44 @@ nav a {
 
 .top-paragraph {
 	display: flex;
-	border: 1px solid;
+	border-top: 1px solid;
 	justify-content: space-between;
+}
+
+.top-paragraph h1 {
+	margin-top: 20px;
 }
 
 .middle-img {
 	width: 100%;
+	margin-top: 20px;
+	
 }
 
 .bottom-paragraph {
 	display: flex;
 	justify-content: space-between;
-	/* width: 70%; */
-	border: 1px solid;
-
+	border-bottom: 1px solid;
 }
 
-.bottom-paragraph div {
-	display: 1px solid red;
+.bottom-paragraph h1 {
+	margin-top: 20px;
 }
 
+.bottom-paragraph p {
+	margin-bottom: 20px;
+}
+
+.contact h1{
+	margin-top: 20px;
+}
+
+.contact p {
+	margin-bottom: 20px;
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 40px;
+}
