--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+/* index.css starts here: */
 
  body {
 	margin: 30px;
@@ -177,7 +178,6 @@ div p {
 
 .paragraph {
 	display: flex;
-	
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
